# PlaneClash-Manage

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config_io.rs  lib.rs  main.rs  rules.rs  scanner.rs
