[package]
name = "planeclash-manage"
version = "0.1.0"
description = "PlaneClash Manage - A standalone rule manager for Clash-based proxy clients"
authors = ["PlaneYao4869"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "planeclash_manage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
